--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,33 @@
-body{
+body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #EDEDEE;
+  background-color: #ededee;
 }
 
-a{
+a {
   color: inherit;
 }
 
-.list-group-flush{
+.list-group-flush {
   color: #495057;
 }
 
-.active{
+.active {
   background-color: #e9ecef !;
 }
 
 main {
-  background-color: #EDEDEE;
+  background-color: #ededee;
 }
 
-.navbar-brand{
+.navbar-brand {
   margin-left: 15px;
   color: #2196f3 !important;
 }
@@ -42,19 +44,17 @@ main {
   padding-top: 0;
 }
 
-
 .flexible-navbar {
   transition: padding-left 0.5s;
   padding-left: 270px;
   background: #fff;
 }
 
-#content{
+#content {
   margin-left: 270px;
-}    
+}
 
-
-.sidebar-fixed .logo-wrapper img{
+.sidebar-fixed .logo-wrapper img {
   width: 100%;
   padding: 2.5rem;
 }
@@ -65,29 +65,28 @@ main {
 }
 
 .list-group-item:hover {
-  color: #49505B;
+  color: #49505b;
   text-decoration: none;
-  background-color: #f8f9fa
+  background-color: #f8f9fa;
 }
 
 .list-group-item:hover {
-  color: #49505B;
+  color: #49505b;
   text-decoration: none;
-  background-color: #f8f9fa
+  background-color: #f8f9fa;
 }
-
 
 .list-group .active {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   border-radius: 5px;
 }
 
-.card-title{
+.card-title {
   font-size: 1.5rem;
   font-weight: 600;
 }
 
-.card-subtitle{
+.card-subtitle {
   font-size: 1.25rem;
   font-weight: 600;
 }
@@ -105,13 +104,13 @@ main {
   transform: translate(-50%, -50%);
 }
 
-
 .card .view.gradient-card-header {
   padding: 1rem 1rem;
   text-align: center;
 }
 
-.card h3, .card.card-cascade h4 {
+.card h3,
+.card.card-cascade h4 {
   margin-bottom: 0px;
 }
 
@@ -157,11 +156,11 @@ main {
   margin-top: 10px;
 }
 
-.form-inline{
-  flex-flow: unset
+.form-inline {
+  flex-flow: unset;
 }
 
-.breadcrumb{
+.breadcrumb {
   margin: 0;
 }
 
@@ -174,8 +173,8 @@ main {
   background-color: #007bff !important;
 }
 
-.page-footer{
-  margin-left: 270px;
+.page-footer {
+  margin-left: 0px;
 }
 
 @media (max-width: 1199.98px) {
@@ -189,29 +188,25 @@ main {
     padding-left: 10px;
   }
 
-  #content{
+  #content {
     margin-left: 0px;
   }
 
-  .page-footer{
+  .page-footer {
     margin-left: 0px;
   }
-  
+
   .card.cascading-admin-card {
     margin-top: 2.5rem;
-  } 
+  }
 }
 
-@media (max-width: 576px) { 
+@media (max-width: 576px) {
   .card.cascading-admin-card {
     margin-top: 2.5rem;
   }
 
-  #breadcrumb{
+  #breadcrumb {
     flex-direction: column;
   }
 }
-
-
-
-
